<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/listPriceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/priceTip"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/discountLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/discountPer10"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discountPer25"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discountPer50"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customLabel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/customLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <SeekBar
                android:id="@+id/customDiscountSeekBar"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="100"
                android:progress="25" />

            <TextView
                android:id="@+id/customDiscountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/discountPer25"
                android:textSize="12sp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savedLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/saveValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroDollarLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/payValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroDollarLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/exitButtonLabel" />
    </TableRow>

</TableLayout>